Fixed spacing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -90,25 +90,6 @@
 		margin-right: 10px;
 	}
 
-	.camlogo img {
-		width: 200px !important;
-		margin-top: 2rem !important;
-	}
-
-	.donating {
-		margin-top: 0 !important;
-		margin-bottom: 3% !important;
-		margin-right: 0rem !important;
-		margin-left: 0px !important;
-		padding-left: 10%;
-		padding-right: 10%;
-	}
-
-	.donating h1 {
-		text-align: center;
-		font-size: 24pt;
-	}
-
 	.phonemap {
 		text-align: center;
 	}
@@ -126,9 +107,32 @@
 		text-align: center;
 	}
 
+	.map-info h1, .map-info p {
+		margin-left: 0 !important;
+	}
+
 	.map-info p {
 		padding-right: 10rem !important;
 		padding-left: 10rem !important; 
+	}
+
+	.camlogo img {
+		width: 200px !important;
+		margin-top: 2rem !important;
+	}
+
+	.donating {
+		margin-top: 0 !important;
+		margin-bottom: 3% !important;
+		margin-right: 0rem !important;
+		margin-left: 0px !important;
+		padding-left: 10%;
+		padding-right: 10%;
+	}
+
+	.donating h1 {
+		text-align: center;
+		font-size: 24pt;
 	}
 
 	.footer {
